--- a/site_app/templates/base.html
+++ b/site_app/templates/base.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'base.css' %}">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>{% block title %}Default Title Text{% endblock %}</title>
 </head>
 <body>
