--- a/youtube_feed/templates/youtube_feed.html
+++ b/youtube_feed/templates/youtube_feed.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 <h1>Hello, world!</h1>
-{% for video in videos %}
-<div>
-    <a target="_blank" href="https://www.youtube.com/watch?v={{ video.snippet.resourceId.videoId }}">
-        <img src="{{ video.snippet.thumbnails.default.url }}" alt="Thumbnail for the {{ video.snippet.title }} video">
+<section class="row">
+    {% for video in videos %}
+    <div class="col-3">
+        <a target="_blank" href="https://www.youtube.com/watch?v={{ video.snippet.resourceId.videoId }}">
+            <img src="{{ video.snippet.thumbnails.medium.url }}" alt="Thumbnail for the {{ video.snippet.title }} video">
+        </a>
         <h2><a target="_blank" href="https://www.youtube.com/watch?v={{ video.snippet.resourceId.videoId }}">{{ video.snippet.title }}</a></h2>
-    </a>
-</div>
-{% endfor %}
+    </div>
+    {% endfor %}
+</section>
 {% endblock %}
