make generic branding

--- a/site_app/templates/base.html
+++ b/site_app/templates/base.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     {% block nav %}
-    <header class="w-full bg-red-700">
-        <img src="{% static 'images/saint-peter-banner.webp' %}" alt="Image showing an icon of Saint Peter, an icon of the Last Supper behind text that says St. Peter Orthodox Church: a western rite parish of the Antiochian Orthodox Archdiocese" class="w-1/2 mx-auto">
+    <header class="w-full bg-red-700 pt-10">
+        <p class="text-6xl text-center mb-10 text-slate-100">Orthodox Church Website Template</p>
+        <!-- <img src="{% static 'images/saint-peter-banner.webp' %}" alt="Image showing an icon of Saint Peter, an icon of the Last Supper behind text that says St. Peter Orthodox Church: a western rite parish of the Antiochian Orthodox Archdiocese" class="w-1/2 mx-auto"> -->
         <div class="w-full py-2 border-t-2 border-b-2 border-yellow-400">
             <nav class="w-1/2 mx-auto flex justify-between">
                 <a href="#" class="text-lg text-yellow-400">Home</a>
@@ -33,9 +34,9 @@
                 <button class="cta-yellow">Donate</button>
             </div>
             <div class="text-center">
-                <p class="text-slate-100">St. Peter Orthodox Church</p>
-                <p class="text-slate-100">7601 Bellaire Dr. S, Fort Worth, TX 76132-4304</p>
-                <p class="text-slate-100">(817) 263-5554</p>
+                <p class="text-slate-100">Orthodox Church Name</p>
+                <p class="text-slate-100">123 ABC Way, Fort Worth, TX 76116</p>
+                <p class="text-slate-100">(817) 000-0000</p>
             </div>
             <div class="flex justify-center">
                 <button>Facebook Share</button>
